fix: impoved alignment

--- a/src/app/inflation/inflation.component.css
+++ b/src/app/inflation/inflation.component.css
@@ -6,13 +6,10 @@
   display: none;
 }
 
-.row {
-  margin-right: 8px;
-  /* display: block;
-overflow-x: scroll;
-overflow-y: scroll;
-scrollbar-color: rebeccapurple green;
-scrollbar-width: thin; */
+.horizontal-align-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .chart-subtitle {
